# maritime-trajectory-prediction

./: .gitattributes  .gitmessage  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_chatlog.txt  REFACTORING_SUMMARY.md  ais_data_documentation.md  dataset_paper_draft.md  empty_files.txt  maritime_trajectory_prediction_configs_config.yaml  maritime_trajectory_prediction_configs_data_ais_processed.yaml  maritime_trajectory_prediction_configs_experiment_base.yaml  maritime_trajectory_prediction_configs_hparams_search_arch_search.yaml  maritime_trajectory_prediction_configs_model_ais_fuser.yaml  maritime_trajectory_prediction_configs_model_traisformer.yaml  maritime_trajectory_prediction_requirements.txt  script.py  todo.md
maritime_trajectory_prediction/: .gitignore  AIS_MESSAGE_CLASSIFICATION.md  BASELINE_MODELS_DOCUMENTATION.md  CLAUDE.md  COMPLETE_PIPELINE_REPORT.md  FINAL_TEST_REPORT.md  GUIDELINE_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  MULTI_TASK_SYSTEM_REPORT.md  Makefile  README.md  REAL_DATA_VALIDATION_REPORT.md  TEST_ANALYSIS.md  TEST_RESULTS_SUMMARY.md  TRAINING_VALIDATION_REPORT.md  VALIDATION_REPORT.md  __init__.py  evaluate_transformer_models.py  inference_transformer_models.py  main.py  py.typed  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_benchmark_models.py  train_sota.py  train_transformer_models.py  train_validation.py  visualize_results.py
maritime_trajectory_prediction2/: BASELINE_MODELS_DOCUMENTATION.md  CACHING_IMPROVEMENTS.md  CLAUDE.md  CRITICAL_ISSUES.md  DETAILED_TASK_ROADMAP.md  M1_1_STATISTICAL_FRAMEWORK_IMPLEMENTATION.md  M1_2_KALMAN_BASELINE_IMPLEMENTATION.md  M1_3_CLASSICAL_ML_IMPLEMENTATION_SPEC.md  M1_3_COMPLETION_SUMMARY.md  M1_5_TEST_FIXES_SPEC.md  M2_COMPREHENSIVE_ARCHITECTURE_MAPPING.md  M2_WORKTREE_PARALLEL_DEVELOPMENT.md  MARITIME_EXPERIMENTS_DOCUMENTATION.md  Makefile  PREPROCESSING_PIPELINE_ANALYSIS.md  README.md  REPO_STATE_AND_REFLECTIONS_FOR_TASKS.md  SYSTEM_ARCHITECTURE.md  __init__.py  evaluate_baselines.py  main.py  py.typed  pyproject.toml  pytest.ini  requirements.txt  run_baseline_and_traisformer.sh  run_baseline_experiments.sh  setup.py  train_all_baselines.py  train_transformer_models.py  (+1 more)
(+394 files in other folders)
