# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ais_project"
version = "0.1.0"
description = "AIS trajectory DataModule"
readme = "README.md"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
  "pandas",
  "torch",
  "pytorch-lightning",
  "hydra-core",
  "omegaconf",
  "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
# no need for include-package-data/etc for pure code-only package
